--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -35,6 +35,20 @@ h2 {
     /*  light grey   */
 }
 
+#portfolio .card-title {
+    color: #1f7798;
+    /*  mid blue    */
+    font-size: 1.2rem;
+}
+
+#portfolio .btn-outline-secondary:hover {
+    color: #1f7798
+}
+
+#portfolio .card-text {
+    min-height: 120px;
+}
+
 /*  Contact section */
 #contact {
     background-color: white;
@@ -48,4 +62,15 @@ h2 {
     background-color: #dbdcde;
     min-height: 500px;
     padding: 5% 7%;
+}
+
+/*  Media queries   */
+
+/*  Use Bootstrap breakpoint for XL screens   */
+@media screen and (min-width: 1200px; ) {
+
+    /* Fixes all portfolio cards being too tall on XL screens */
+    #portfolio .card-text {
+        min-height: auto;
+    }
 }
