--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -67,7 +67,7 @@ h2 {
 /*  Media queries   */
 
 /*  Use Bootstrap breakpoint for XL screens   */
-@media screen and (min-width: 1200px;) {
+@media screen and (min-width: 1200px) {
 
     /* Fixes all portfolio cards being too tall on XL screens */
     #portfolio .card-text {
